test/classes/initializers/phase1/methodCall.good
methodCall.chpl:5: error: attempted method call too early during initialization
